# grpc_playground

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  test_smoke.cc
arithmetic/: add.proto  mul.proto
bidi/: bidi_stream_client.cc  bidi_stream_perftest.cc  bidi_stream_server.cc
src/: schema_smoke.proto
src/arithmetic/: test_add.cc  test_mul.cc
src/bidi/: bidi_stream_client.cc
src/perftest/: grpc_perftest.h  grpc_perftest_main.h  modulo_client.cc  modulo_perftest.cc  modulo_schema.proto  modulo_server.cc
